src/objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>CPQ_Contract_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Contract Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Account_Short_Name__c</fullName>
        <formula>BLANKVALUE(Account.CS_Account_Short_Name__c,&apos;Account Short name is Blank&apos;)</formula>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_BFO_Key__c</fullName>
        <label>BFO Key</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_BFO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Bill_To_Contact_Name__c</fullName>
        <formula>CS_Bill_to_Contact__r.Contact__r.FirstName+&apos; &apos;+ CS_Bill_to_Contact__r.Contact__r.LastName</formula>
        <label>Bill To Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Bill_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Bill To Contact</inlineHelpText>
        <label>Bill to Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account_Contact__c.Contact_Type__c</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <filterItems>
                <field>Account_Contact__c.Account__c</field>
                <operation>equals</operation>
                <value>Service Contract: Account ID</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Contact__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Contact_Id__c</fullName>
        <formula>CS_Ship_to_Contact__r.Contact__c</formula>
        <label>Customer Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_LIne_Item_with_SN__c</fullName>
        <label>Line Item with SN</label>
        <summaryFilterItems>
            <field>ContractLineItem.CS_Serial_Number__c</field>
            <operation>notEqual</operation>
            <value>NA</value>
        </summaryFilterItems>
        <summaryForeignKey>ContractLineItem.ServiceContractId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CS_Non_Standard__c</fullName>
        <formula>CASE(Account.CS_Account_Short_Name__c, 
&apos;Aviva Canada&apos;,&apos;Customer has Non Standard SLA&apos;,
&apos;Aviva UK&apos;, &apos;Customer has Non Standard SLA&apos;,
&apos;Berkley&apos;, &apos;Customer has Non Standard SLA&apos;,
&apos;Catlin&apos;, &apos;Customer has Non Standard SLA&apos;,
&apos;ICBC&apos;, &apos;Customer has Non Standard SLA&apos;,
&apos;MiddleOak&apos;, &apos;Customer has Non Standard SLA&apos;,
&apos;Harleysville&apos;, &apos;Customer has Non Standard SLA&apos;,
&apos;Nationwide&apos;, &apos;Customer has Non Standard SLA&apos;,
&apos;Dentists&apos;, &apos;Customer has Non Standard SLA&apos;,
&apos;Riverstone&apos;, &apos;Customer has Non Standard SLA&apos;,
&apos;NA&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Rating_Management_Key__c</fullName>
        <description>*** Service Cloud Rating Management Product Key *****</description>
        <label>Rating Management Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Rating_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rating Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Re_Insurance_Key__c</fullName>
        <description>***** Service Cloud- Rating Management Product Key****</description>
        <label>Re Insurance Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Re_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_SAP_Production_Key__c</fullName>
        <description>*** Service Cloud SAP Production Key *****</description>
        <label>SAP Production Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_SAP_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_SN_Template_ID__c</fullName>
        <formula>/*
IF(CS_LIne_Item_with_SN__c &gt; 0,  $Setup.CS_Software_Delivery__c.CS_Conga_Key_Attachment_Template_Id__c ,&apos;&apos;)
*/

IF(CS_Rating_Management__c, $Setup.CS_Software_Delivery__c.CS_Rating_Management_Template__c ,&apos;&apos;)+&apos;,&apos;+
IF(CS_Re_Insurance__c, $Setup.CS_Software_Delivery__c.CS_Re_Insurance_Template__c ,&apos;&apos;)+&apos;,&apos;+
IF(CS_BFO__c, $Setup.CS_Software_Delivery__c.CS_BFO_Template__c,&apos;&apos;)+&apos;,&apos;+
IF(CS_SAP_Production__c, $Setup.CS_Software_Delivery__c.CS_SAP_Production_Template__c,&apos;&apos;)</formula>
        <label>Serial Number Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Sales_Account_Manager_Email__c</fullName>
        <description>Sales Account Manager Email</description>
        <formula>Account.Customer_Relationship_Mgr__r.Email</formula>
        <label>Sales Account  Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Services_Account_Manager_Email__c</fullName>
        <description>Services Contact Manager Id</description>
        <formula>Account.Services_Account_Manager__r.Email</formula>
        <label>Services Account Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Ship_To_Contact_Name__c</fullName>
        <formula>CS_Ship_to_Contact__r.Contact__r.FirstName+&apos; &apos;+ CS_Ship_to_Contact__r.Contact__r.LastName</formula>
        <label>Ship To Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Ship_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Ship To Contact</inlineHelpText>
        <label>Ship to Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account_Contact__c.Contact_Type__c</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <filterItems>
                <field>Account_Contact__c.Account__c</field>
                <operation>equals</operation>
                <value>Service Contract: Account ID</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Contact__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Support_Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Software_Delivery_Date__c</fullName>
        <inlineHelpText>Software Delivery Date</inlineHelpText>
        <label>Software Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Software_Delivery_Status__c</fullName>
        <formula>IF(CS_is_Delivered__c, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;))</formula>
        <label>Software Delivery Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Software_Delivery_Template_Id__c</fullName>
        <formula>$Setup.CS_Software_Delivery__c.CS_Conga_Email_Template_Id__c</formula>
        <label>Software Delivery Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_is_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Account_Manager__c</fullName>
        <formula>Account.Services_Account_Manager__r.FirstName + &apos; &apos; + Account.Regional_Alliance_Manager__r.LastName</formula>
        <label>Services Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Delivery_Alias__c</fullName>
        <description>Software delivery Alias</description>
        <label>Software Delivery Alias</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
    </listViews>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>